--- a/index.html
+++ b/index.html
@@ -4,76 +4,75 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PunchRevive – Resurrect Dead Code</title>
+  <title>PunchRevive – Legacy Code Restoration</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=Creepster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <style>
-    @keyframes flicker {
-      0% { opacity: 0.95; }
-      5% { opacity: 0.8; }
-      10% { opacity: 0.9; }
-      15% { opacity: 0.85; }
-      20% { opacity: 1; }
-      100% { opacity: 1; }
+    :root {
+      --primary: #10b981;
+      --bg: #020617;
     }
-    @keyframes punch-ripple {
-      0% { transform: scale(1); opacity: 1; box-shadow: 0 0 0 0 rgba(0, 255, 0, 0.7); }
-      100% { transform: scale(1.5); opacity: 0; box-shadow: 0 0 0 10px rgba(0, 255, 0, 0); }
+    @keyframes pulse-glow {
+      0%, 100% { opacity: 0.6; transform: scale(1); }
+      50% { opacity: 1; transform: scale(1.05); }
     }
-    @keyframes cell-flash {
-      0% { background-color: #fff; filter: brightness(2); }
-      100% { filter: brightness(1); }
+    @keyframes scanline {
+      0% { top: -100%; }
+      100% { top: 100%; }
     }
-    .flicker-overlay {
-      pointer-events: none;
-      background: rgba(15, 255, 15, 0.03);
-      animation: flicker 4s infinite;
+    @keyframes float {
+      0%, 100% { transform: translateY(0) rotate(0deg); }
+      50% { transform: translateY(-20px) rotate(5deg); }
+    }
+    @keyframes logic-rain {
+      0% { transform: translateY(-10vh); opacity: 0; }
+      10% { opacity: 1; }
+      90% { opacity: 1; }
+      100% { transform: translateY(110vh); opacity: 0; }
+    }
+    @keyframes morph {
+      0%, 100% { border-radius: 40% 60% 70% 30% / 40% 50% 60% 50%; }
+      34% { border-radius: 70% 30% 50% 50% / 30% 60% 40% 70%; }
+      67% { border-radius: 100% 60% 60% 100% / 100% 100% 60% 60%; }
     }
     .crt-lines {
-      background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
-      background-size: 100% 2px, 3px 100%;
+      background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.02), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.02));
+      background-size: 100% 3px, 3px 100%;
       pointer-events: none;
     }
     .glow-text {
-      text-shadow: 0 0 5px #0f0, 0 0 10px #0f0;
+      text-shadow: 0 0 10px rgba(16, 185, 129, 0.5);
     }
-    body {
-      background-color: #000;
-      color: #0f0;
-      font-family: 'IBM Plex Mono', monospace;
-      overflow-x: hidden;
+    .shape-blob {
+      filter: blur(80px);
+      animation: morph 12s ease-in-out infinite alternate;
     }
-    h1, h2, h3, .creepster {
-      font-family: 'Creepster', cursive;
-    }
-    .punch-cell:hover {
-      background-color: rgba(0, 255, 0, 0.3);
-    }
-    .punched {
-      background-color: #0f0 !important;
-      box-shadow: 0 0 8px #0f0;
-    }
-    .punch-effect {
-      animation: cell-flash 0.3s ease-out;
-      position: relative;
-    }
-    .punch-effect::after {
-      content: '';
+    .rain-bit {
       position: absolute;
-      inset: 0;
-      border: 1px solid #0f0;
-      animation: punch-ripple 0.4s ease-out;
+      animation: logic-rain linear infinite;
       pointer-events: none;
     }
+    body {
+      background-color: var(--bg);
+      color: #e2e8f0;
+      font-family: 'Inter', sans-serif;
+      overflow-x: hidden;
+    }
+    .mono {
+      font-family: 'IBM Plex Mono', monospace;
+    }
     ::-webkit-scrollbar {
-      width: 8px;
+      width: 6px;
     }
     ::-webkit-scrollbar-track {
-      background: #001100;
+      background: #0f172a;
     }
     ::-webkit-scrollbar-thumb {
-      background: #0f0;
-      border-radius: 4px;
+      background: #334155;
+      border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+      background: var(--primary);
     }
   </style>
 <script type="importmap">
@@ -88,9 +87,8 @@
 }
 </script>
 </head>
-<body class="min-h-screen bg-black relative">
+<body class="min-h-screen relative">
   <div id="root"></div>
-  <div class="fixed inset-0 crt-lines z-50 pointer-events-none opacity-20"></div>
-  <div class="fixed inset-0 flicker-overlay z-40 pointer-events-none"></div>
+  <div class="fixed inset-0 crt-lines z-50 pointer-events-none opacity-10"></div>
 </body>
 </html>
